--- a/index.html
+++ b/index.html
@@ -2,22 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>Anúcios Delivery</title>
+    <title>Anúcios Delivery - João Pessoa-PB e Região.</title>
     <meta http-equiv="refresh" content="15; URL='https://anunciosdelivery.github.io/03/'"/>
 </head>
 <body>
-<br />
-<center><a href="https://www.instagram.com/utidados/"><img src="uti1.png" alt="UTI Dados"/></a></center>
-<br />
-<center><h1 align="center"><a href="https://www.instagram.com/utidados/" alt="UTI Dados" target="_blanck">Instagram: @utidados</a></h1></center>
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<center><a href="https://www.instagram.com/anunciosdelivery/" alt="Anúncios Delivery" target="_blanck"><img src="logo.png" alt="Anúncios Delivery" width="10%"/></a></center>
-<br />
-</body >
-</body >
+    <br/>
+    <center>
+        <a href="####"><img src="anuncie.png" /></a>
+    </center>
+    <br/>
+    <center><a href="https://linktr.ee/anunciosdelivery"><img src="logo.png" width="150px" /></a></center>
+    <br/>
 </html >
