--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <br/>
     <center>
-        <a href="####"><img src="anuncie2.png" /></a>
+        <a href="####"><img src="anuncei2.png" /></a>
     </center>
     <br/>
     <center><a href="https://linktr.ee/anunciosdelivery"><img src="logo.png" width="150px" /></a></center>
