--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <meta http-equiv="refresh" content="15; URL='https://anunciosdelivery.github.io/03/'"/>
 </head>
 <body>
-    <br/>
-    <center>
-        <a href="####"><img src="anuncei2.png" /></a>
-    </center>
-    <br/>
-    <center><a href="https://linktr.ee/anunciosdelivery"><img src="logo.png" width="150px" /></a></center>
-    <br/>
+    <h1>Aumentanto seguidores....</h1>
+<center>
+<iframe src="https://corretorcarlosnavarro.blogspot.com" frameboard="0" width="800" reight="600"></iframe>
 </html >
