--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <center>
-<iframe src="https://www.google.com/search?q=brasileirao+hoje&oq=brasileirao+hoje&aqs=chrome..69i57j0i512l9.7523j1j15&sourceid=chrome&ie=UTF-8#sie=m;/g/11n249_1w3;2;/m/0fnk7q;dt;fp;1;;" frameboard="0" width="auto" reight="auto"></iframe>
+<iframe src="https://www.google.com/search?q=brasileirao+hoje&oq=brasileirao+hoje&aqs=chrome..69i57j0i512l9.7523j1j15&sourceid=chrome&ie=UTF-8#sie=m;/g/11n249_1w3;2;/m/0fnk7q;dt;fp;1;;" frameboard="0" width="800" reight="600"></iframe>
 </body>
 </html>
 
