--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>Anúcios Delivery - João Pessoa-PB e Região.</title>
+    <title>Nordeste Mil Graus</title>
     <meta http-equiv="refresh" content="15; URL='https://anunciosdelivery.github.io/03/'"/>
 </head>
 <body>
 <center>
-<iframe src="https://www.placardefutebol.com.br/uganda-cup/23-09-2021-bul-x-express-fc.html" frameboard="0" width="auto" reight="auto"></iframe>
+<img src="seguir2.png" width="800px" reigth="600px" />
+</center>
 </body>
 </html>
 
