--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <meta http-equiv="refresh" content="30; URL='https://anunciosdelivery.github.io/03/'"/>
 </head>
 <body>
-<br/>
-<br/>
-<br/>
-<center>
-<img src="seguir2.png" width="800px" reigth="600px" />
-</center>
+<iframe src="https://www.otempo.com.br/hotsites/eleicoes-2020/candidatos/joao-pessoa-pb/vereador/jean-viana" title="Jean Viana 13222"></iframe> 
 </body>
 </html>
 
